# SurgTwin-GS

./: .gitignore  LICENSE  M2-B_Recovery_Report.md  NOTICE.md  README.md  index.md  pyproject.toml  repo-mapping.md  requirements.txt  sprint0_revision_notes.md  technical-implementation-blueprint.md
action-plans/: expert-answer-18-implementation-plan.md
data/: README.md
diary/: 2026-06-27-sprint0-complete.md  2026-06-28-sprint1-milestone1.md  2026-06-29-sprint1-m1-audit.md  2026-06-29-sprint2-m2a-depth-semantics.md  2026-06-30-sprint2-m2b-depth-guided.md  2026-07-01-sprint2-m2b-recovery.md  2026-07-02-sprint3-m3-impl.md  sprint0-setup-2026-06-26.md
docs/: BACKEND_INTERFACE.md  COORDINATE_CONVENTIONS.md  DATA_CONTRACT.md
planning/: index.md  m3-plan-revision.md
scripts/: audit_camera_geometry.py  compare_baseline_vs_depth_guided.py  compare_m2b_vs_m3.py  compare_m3_vs_m4a1.py  evaluate_m4_a2_0.py  evaluate_m4_a2_1.py  explore_servct.py  generate_synthetic_servct.py  precompute_masks.py  prepare_stereomis_frames.py  prepare_stereomis_manifest.py  run_m4a1r_50k_warmup.sh  run_m4a2_0.sh  run_m4a2_0_20k.sh  run_m4a2_1.sh  smoke_stereomis_render.py  sprint0_render_servct.py  train_baseline.py  train_depth_guided.py  train_uncertainty.py  validate_servct_geometry.py  verify_depth_real.py  verify_depth_synthetic.py  verify_render_depth_semantics.py
tests/: test_audit_camera_geometry.py  test_best_val_checkpoint.py  test_camera_projection.py  test_checkpointing.py  test_clip_active_ratio.py  test_compare_m2b_vs_m3_gate.py  test_compare_m3_vs_m4a1.py  test_depth_loss.py  (+36 more)
(+46 files in other folders)
