[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "surgtwin-gs"
version = "0.1.0"
description = "Uncertainty-Weighted Gaussian Splatting for 3D Surgical Scene Reconstruction"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "gsplat>=0.1.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[tool.setuptools.packages]
find = {}
